--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "lib": ["es2020", "dom"],
     "skipLibCheck": true
   },
-  "include": ["src/**/*", "src/**/*.vue","src/**/*.tsx",],
+  "include": ["src/**/*", "src/**/*.vue","types/**/*.d.ts",],
   "exclude": ["node_modules"] 
 }
