--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,11 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
+      "#/*": ["types/*"]
     },
     "lib": ["es2020", "dom"],
     "skipLibCheck": true
   },
-  "include": ["src/**/*", "src/**/*.vue","types/**/*.d.ts",],
-  "exclude": ["node_modules"] 
+  "include": ["src/**/*", "src/**/*.vue", "types/**/*.d.ts", "types/**/*.ts"],
+  "exclude": ["node_modules"]
 }
