--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,7 @@
 VITE_API_BASE_URL= 'http://localhost:8080'
+
+VITE_PROXY = =[["/api-test","http://crmv2.mabangerp.com/api"]]
+
+VITE_GLOB_API_URL = 'http://crmv2.mabangerp.com/api'
+
+VITE_GLOB_API_URL_PREFIX=
